# hft-order-engine

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  generate_diagrams.py  requirements.txt  run.sh  setup.py
docs/architecture/: README.md  class_diagram.puml  data_flow.puml  deployment.puml  performance_optimizations.puml  python_bindings.puml  system_architecture.puml
examples/: CMakeLists.txt  python_example.py  simple_order_book.cpp
include/orderbook/: market_data_feed.h  market_data_handler.h  order.h  order_book.h  trade.h
src/core/: market_data_feed.cpp  market_data_handler.cpp  order.cpp  order_book.cpp  trade.cpp
src/python/orderbook/: __init__.py  core.cpp
tests/: CMakeLists.txt  test_order_book.cpp
